deployment/kubernetes/base/agora-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agora
  namespace: harmonia
  labels:
    app.kubernetes.io/name: agora
    app.kubernetes.io/component: collaboration
    app.kubernetes.io/part-of: harmonia-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: agora
  template:
    metadata:
      labels:
        app.kubernetes.io/name: agora
        app.kubernetes.io/component: collaboration
        app.kubernetes.io/part-of: harmonia-platform
    spec:
      containers:
        - name: agora
          image: localhost:32000/harmonia/agora:1.0.0-SNAPSHOT
          ports:
            - containerPort: 8092
              name: http-as
            - containerPort: 9992
              name: management
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 9992
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 9992
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
