deployment/kubernetes/base/synapse-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: harmonia
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/component: collaboration
    app.kubernetes.io/part-of: harmonia-platform
spec:
  ports:
    - port: 8008
      targetPort: 8008
      name: http-matrix
  selector:
    app.kubernetes.io/name: synapse
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-synapse
  namespace: harmonia
  labels:
    app.kubernetes.io/name: postgres-synapse
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: harmonia-platform
spec:
  ports:
    - port: 5436
      targetPort: 5432
      name: postgres
  selector:
    app.kubernetes.io/name: postgres-synapse
